# aura-backend

./: .env  db.sqlite3  manage.py  pyproject.toml  requirements.txt
apps/ai/: models.py  selectors.py  services.py  urls.py  views.py
apps/ai/migrations/: 0001_initial.py
apps/auth_app/: serializers.py  urls.py  views.py
apps/outfits/: apps.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
apps/outfits/migrations/: 0001_initial.py  0002_initial.py
apps/subscriptions/: models.py  urls.py  views.py
apps/subscriptions/migrations/: 0001_initial.py  0002_initial.py
apps/users/: models.py
apps/users/migrations/: 0001_initial.py
apps/wardrobe/: apps.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
apps/wardrobe/migrations/: 0001_initial.py
aura_backend/: settings.py  urls.py  wsgi.py
