[project]
name = "aura-backend"
version = "0.1.0"
description = "AURA AI stylist backend"
requires-python = ">=3.12"
dependencies = [
  "Django>=5.1,<6.0",
  "djangorestframework>=3.15,<4.0",
  "djangorestframework-simplejwt>=5.3,<6.0",
  "psycopg[binary]>=3.2,<4.0",
  "Pillow>=10.4,<12.0",
  "cloudinary>=1.41,<2.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.9,<3.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
